@@ -25,7 +25,13 @@ documents those changes that are of interest to users and admins.
  -- BLUEGENE - Fix it so 1 midplane clusters will run small block jobs.
  -- Add Command and WorkDir to the output of "scontrol show job" for job
     allocations created using srun (not just sbatch).
+<<<<<<< .mine
+ -- Correct processing of memory and disk space specifications in the salloc,
+    sbatch, and srun commands to work properly with a suffix of "MB", "GB",
+    etc. and not only with a single letter (e.g. "M", "G", etc.).
+=======
  -- Fixed sacctmgr to not add blank defaultqos' when doing a cluster dump.
+>>>>>>> .r21746
 
 * Changes in SLURM 2.2.0.rc3
 ============================
